2001-10-26  Tomas Abrahamsson  <tab@lysator.liu.se>

	* textmodes/artist.el (artist-version): 1.2.4.
	(artist-butlast-fn): New variable.
	(artist-butlast): New function.
	(artist-ellipse-mirror-quadrant): Use it.
	(artist-mouse-draw-poly): Use nil for `point-list'.
	(artist-mouse-draw-poly): Check for point-list being nil.

2001-10-26  Peter Kleiweg  <kleiweg@let.rug.nl>

	* progmodes/ps-mode.el (ps-mode-print-function): Remove quote for
	lambda expression.
	(ps-mode-menu-main): Submenu with options on/off was replaced with
	a toggle button.
	(ps-mode, ps-run-mode): Define with `define-derived-mode'
	(ps-mode): Autoload cookie added on same line as comment
	(ps-mode-tabkey, ps-mode-backward-delete-char):
	(ps-mode-r-balance): Replace `delete-horizontal-space' and
	`indent-to' with `indent-line-to'
	(ps-mode-print-buffer, ps-mode-print-region): Use `funcall'
	instead of `eval'.
	(ps-mode-print-region): Use `with-temp-buffer'.
	(ps-run-start): Use of `mapconcat'.  Use `apply' instead of
	`eval'.
	(numerous places): Add back-tick and tick around names in
	docstrings, fix punctuation in docstrings, remove trailing spaces.
	
2001-10-25  Sam Steingold  <sds@gnu.org>

	* add-log.el (add-log-always-start-new-record): New user option.
	(add-change-log-entry): Use it.

2001-10-25  Richard M. Stallman  <rms@gnu.org>

	* progmodes/etags.el (tags-query-replace): Make tags-loop-scan
	bind case-fold-search if FROM is not all lower case.

2001-10-25  Gerd Moellmann  <gerd@gnu.org>

	* startup.el (normal-top-level): Check for frame-initial-frame
	only if it's really used.

	* mail/mh-utils.el (mh-recenter): Call recenter with arg `(4)'.

	* progmodes/compile.el (compilation-parse-errors-filename-function):
	New variable.
	(compilation-parse-errors): Use it.

2001-10-25  Stefan Monnier  <monnier@cs.yale.edu>

	* emacs-lisp/checkdoc.el (checkdoc-eval-defun): Call eval-defun
	interactively so that C-u M-C-x still does edebug.